--- a/package.json
+++ b/package.json
@@ -1,10 +1,53 @@
 {
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "^4.1.8",
+    "@react-native-community/viewpager": "^5.0.11",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/auth": "^12.8.0",
+    "@react-navigation/bottom-tabs": "5.x",
+    "@react-navigation/material-top-tabs": "^6.0.4",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
+    "@react-navigation/stack": "5.x",
+    "eas-cli": "^0.30.1",
+    "emoji-datasource": "^7.0.2",
+    "es-module-lexer": "^0.9.3",
     "expo": "~42.0.0",
+    "expo-av": "~9.2.3",
+    "expo-blur": "~9.0.3",
+    "expo-constants": "~11.0.1",
+    "expo-document-picker": "~9.2.4",
+    "expo-font": "~9.2.1",
+    "expo-image-picker": "~10.2.2",
+    "expo-screen-capture": "^3.2.0",
+    "expo-speech": "~9.2.0",
+    "expo-video-player": "^2.0.1",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-actions-sheet": "^0.5.4",
+    "react-native-camera": "^4.2.1",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-global-font": "^1.0.3",
+    "react-native-image-picker": "^4.1.1",
+    "react-native-image-resizer": "^1.4.5",
+    "react-native-orientation": "^3.1.3",
+    "react-native-pager-view": "5.0.12",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-splash-screen": "^3.2.0",
+    "react-native-svg": "^12.1.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "react-navigation-tabs": "^2.11.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
